
	* tests/test-pokerdatabase.py.in
	(PokerDatabaseTestCase.tearDown): Added code to delete the test user.
	(Run): Used VerboseTextReporter instead of regular TextReporter.
	(PokerDatabaseTestCase.test04_rootBothUsers): Added catch for
	exception when it attempts to recreate the root user.
	(PokerDatabaseTestCase.setUp): Added a tearDown() call just in
	case cruft is left around.

2008-02-01  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerdatabase.py.in: Fixed name test user to not be
	the same as the database.

2008-01-31  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerdatabase.py.in
	(PokerDatabaseTestCase.test05_missingRootUser): Wrote function.
	(PokerDatabaseTestCase.tearDown): Made separate try for each
	operation.
	(PokerDatabaseTestCase.test06_databaseAlreadyExists): Wrote function.

2008-01-29  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerdatabase.py.in
	(PokerDatabaseTestCase.test03_schemaFileMissing): Wrote function.
	(PokerDatabaseTestCase.test02_dbVersionTooOld): Fixed to restore
	original MySQL function when test is done.
	(PokerDatabaseTestCase.test04_rootBothUsers): Wrote function.
	(PokerDatabaseTestCase.test01_upgrade): Added assert for final
	version number.
	(PokerDatabaseTestCase.setUp): Added code to find version number
	by parsing file.

2008-01-28  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerdatabase.py.in
	(PokerDatabaseTestCase.test02_dbVersionTooOld): Wrote function.
	(PokerDatabaseTestCase.setUp): Do not create self.db here, since
	sometimes we want it to be a dummy.
	(PokerDatabaseTestCase.tearDown): try/except around db close; it
	may never get created.
	(Run): Switch to VERBOSE_T == 4 to get maximum verbosity coverage.

2008-01-27  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokertable.py.in (MockService.saveHand): Added round5
	test.
	(MockService.loadHand): Added 'values' to the serials2chips dict.
	(MockService.saveHand): Fixed showdown test since we now have two
	showdowns.