@@ -225,6 +225,30 @@ class PokerDatabaseTestCase(unittest.TestCase):
         db.close()
         self.db = pokerdatabase.PokerDatabase(self.settings)
         self.assertEquals(self.db.getVersion(), '1.0.5')
+    # ----------------------------------------------------------------------------
+    def test07_multipleRowsInVersionTable(self):
+        """Test for when the database already exists"""
+        import MySQLdb
+        from pokernetwork.pokerdatabase import ExceptionUpgradeFailed
+
+        settings = pokernetworkconfig.Config([])
+        settings.doc = libxml2.parseMemory(settings_xml,
+                                           len(settings_xml))
+        settings.header = settings.doc.xpathNewContext()
+        self.settings = settings
+        parameters = settings.headerGetProperties("/server/database")[0]
+
+        self.db = pokerdatabase.PokerDatabase(self.settings)
+
+        self.db.db.query("DROP TABLE IF EXISTS server;")
+        self.db.db.query("""CREATE TABLE server (version VARCHAR(16) NOT NULL)
+                            ENGINE=InnoDB CHARSET=utf8;""")
+        self.db.db.query("""INSERT INTO server (version) VALUES ("1.1.0");""")
+        self.db.db.query("""INSERT INTO server (version) VALUES ("1.2.0");""")
+        try:
+            self.db.setVersionInDatabase("1.3.0")
+        except ExceptionUpgradeFailed, euf: # handle trouble
+            self.assertEquals(euf.args[0], "update server set version = '1.3.0': changed 2 rows, expected one or zero")
 # --------------------------------------------------------------------------------
 def GetTestSuite():
     suite = runner.TestSuite(PokerDatabaseTestCase)
